# ai-classification

./: .env.example  PROJECT_STRUCTURE.md  README.md  config.py  demo.py  main.py  pyproject.toml  requirements.txt  run.sh  sample_counterparty_codes.xlsx
prompts/counterparty/: v1_base.txt
prompts/jurisdiction/: v1_base.txt
src/: __init__.py  data_models.py  llm_interface.py
src/dspy_logic/: __init__.py  modules.py  signatures.py
src/parsing/: __init__.py  base_parser.py  document_parser.py
src/utils/: __init__.py  s3_handler.py
